package unc.gl.st.border;

public class Stone {
    
}
