package unc.gl.st.card;

public class ClanCard {
    
}
