package unc.gl.st.card;

public enum Color {
    
}
