package unc.gl.st.player;

public class Hand {
    
}
