package unc.gl.st.stock;

public class Stock {
    
}
